packages/edxml-test-corpus/edxml-test-corpus-3.0.1.tar.gz/edxml-test-corpus-3.0.1/edxml_test_corpus/tests/3/3.0/3.0.0/valid/upgrade-concept/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if upgrading of a concept works as expected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types/>
    <concepts>
      <concept name="a" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
    </concepts>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts>
      <!-- No changes, only a version increment. -->
      <concept name="a" description="a" display-name-singular="a" display-name-plural="a" version="2"/>
    </concepts>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts>
      <concept name="a" description="changed-description" display-name-singular="a" display-name-plural="a" version="3"/>
    </concepts>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts>
      <concept name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="a" version="4"/>
    </concepts>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts>
      <concept name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="5"/>
    </concepts>
    <event-types/>
    <sources/>
  </ontology>
</edxml>
